--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,15 @@
 @import url(../vendor/fonts.css);
 
 @import url(../blocks/page/page.css);
+
+/* header */
+
+/* hero */
+@import url(../blocks/hero/hero.css);
+@import url(../blocks/hero/__content/hero__contant.css);
+@import url(../blocks/hero/__container/hero__container.css);
+@import url(../blocks/hero/__freelancer/hero__freelancer.css);
+@import url(../blocks/hero/__author/hero__author.css);
+@import url(../blocks/hero/__description/hero__description.css);
+@import url(../blocks/hero/__button/hero__button.css);
+@import url(../blocks/hero/__avatar/hero__avatar.css);
