--- a/blocks/hero/__description/hero__description.css
+++ b/blocks/hero/__description/hero__description.css
@@ -1,3 +1,8 @@
 .hero__description {
-    
+  max-width: 444px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  margin: 0;
+  margin-bottom: 38px;
 }
