--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../vendor/fonts.css);
 
 @import url(../blocks/page/page.css);
+@import url(../content-title/content-title.css);
 
 /* header */
 
@@ -14,3 +15,16 @@
 @import url(../blocks/hero/__description/hero__description.css);
 @import url(../blocks/hero/__button/hero__button.css);
 @import url(../blocks/hero/__avatar/hero__avatar.css);
+
+/* portfolio */
+@import url(../blocks/portfolio/portfolio.css);
+@import url(../blocks/portfolio/__container/portfolio__container.css);
+@import url(../blocks/projects/projects.css);
+@import url(../blocks/projects/__image/projects__image.css);
+@import url(../blocks/projects/__container/projects__container.css);
+@import url(../blocks/projects/__card/projects__card.css);
+@import url(../blocks/projects/__title/projects__title.css);
+@import url(../blocks/projects/__button/projects__button.css);
+@import url(../blocks/projects/__card/_name/projects__card_name_corner-of-chamarel.css);
+@import url(../blocks/projects/__card/_name/projects__card_name_club-golf-course.css);
+@import url(../blocks/projects/__card/_name/projects__card_name_falls-hiking-trip.css);
