--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__container/header__container.css);
 @import url(../blocks/header/__link/header__link.css);
+
 /* socials */
 @import url(../blocks/socials/socials.css);
 @import url(../blocks/socials/__item/socials__item.css);
@@ -22,6 +23,15 @@
 @import url(../blocks/hero/__description/hero__description.css);
 @import url(../blocks/hero/__button/hero__button.css);
 @import url(../blocks/hero/__avatar/hero__avatar.css);
+
+/* features */
+@import url(../blocks/features/features.css);
+@import url(../blocks/features/__container/features__container.css);
+@import url(../blocks/features/__title/features__title.css);
+@import url(../blocks/features/__list/features__list.css);
+@import url(../blocks/features/__item/features__item.css);
+@import url(../blocks/features/__item-name/features__item-name.css);
+@import url(../blocks/features/__text/features__text.css);
 
 /* portfolio */
 @import url(../blocks/portfolio/portfolio.css);
