couple fixes hero

--- a/blocks/hero/__avatar/hero__avatar.css
+++ b/blocks/hero/__avatar/hero__avatar.css
@@ -1,4 +1,6 @@
 .hero__avatar {
     border-radius: 100%;
-    border: solid #fff 10px;
+    border: solid #fff 11px;
+    max-width: 384px;
+    height: auto;
 }
