--- a/blocks/hero/__button/hero__button.css
+++ b/blocks/hero/__button/hero__button.css
@@ -1,13 +1,13 @@
 .hero__button {
-  width: 300px;
-  height: 66px;
+  padding: 25px 62px;
   background-color: #ffbb01;
   box-shadow: 0 4px 0 #b68500;
   border-radius: 10px;
-  color: #000;
-  font-weight: bold;
+  color: #1b2944;
+  font-weight: 700;
   font-size: 12px;
-  line-height: 1.30;
+  line-height: 16px;
   text-transform: uppercase;
-  border: 0;
+  text-decoration: none;
+  align-self: start;
 }
