--- a/pages/index.css
+++ b/pages/index.css
@@ -35,12 +35,8 @@
 /* portfolio */
 @import url(../blocks/portfolio/portfolio.css);
 @import url(../blocks/portfolio/__container/portfolio__container.css);
-@import url(../blocks/projects/projects.css);
-@import url(../blocks/projects/__image/projects__image.css);
-@import url(../blocks/projects/__container/projects__container.css);
-@import url(../blocks/projects/__card/projects__card.css);
-@import url(../blocks/projects/__title/projects__title.css);
-@import url(../blocks/projects/__button/projects__button.css);
-@import url(../blocks/projects/__card/_name/projects__card_name_corner-of-chamarel.css);
-@import url(../blocks/projects/__card/_name/projects__card_name_club-golf-course.css);
-@import url(../blocks/projects/__card/_name/projects__card_name_falls-hiking-trip.css);
+@import url(../blocks/portfolio/__projects/portfolio__projects.css);
+@import url(../blocks/project/project.css);
+@import url(../blocks/project/__image/project__image.css);
+@import url(../blocks/project/__title/project__title.css);
+@import url(../blocks/project/__link/project__link.css);
