--- a/pages/index.css
+++ b/pages/index.css
@@ -40,3 +40,10 @@
 @import url(../blocks/project/__image/project__image.css);
 @import url(../blocks/project/__title/project__title.css);
 @import url(../blocks/project/__link/project__link.css);
+
+/* gallery */
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery/__container/gallery__container.css);
+@import url(../blocks/gallery/__item/gallery__item.css);
+@import url(../blocks/gallery/__link/gallery__link.css);
+@import url(../blocks/gallery/__hover/gallery__hover.css);
