--- a/blocks/section-container/section-container.css
+++ b/blocks/section-container/section-container.css
@@ -1,4 +1,17 @@
-.section__container {
+.section-container {
     max-width: 944px;
     margin: auto;
 }
+
+@media screen and (max-width: 1040px) {
+    .section-container {
+        max-width: calc(100% - 80px);
+    }
+}
+
+/* @media screen and (max-width: 1040px) {
+    .section-container {
+        padding-right: 50px;
+        padding-left: 50px;
+    }
+} */
