--- a/blocks/gallery/__link/gallery__link.css
+++ b/blocks/gallery/__link/gallery__link.css
@@ -6,6 +6,13 @@
     font-weight: 500;
     letter-spacing: 0.32px;
     position: relative;
+    max-width: 224px;
+    max-height: 225px;
+    height: calc(100% - 7px);
+}
+
+@media screen and (max-width: 1038px) {
+
 }
 
 .gallery__link::before {
