--- a/blocks/features/__item/features__item.css
+++ b/blocks/features/__item/features__item.css
@@ -1,3 +1,9 @@
 .features__item {
   max-width: 304px;
 }
+
+@media screen and (max-width: 1024px) {
+    .features__item {
+        max-width: 360px;
+    }
+}
