--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -4,3 +4,26 @@
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
 }
+
+@media screen and (max-width: 816px) {
+    .gallery__container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .gallery__container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .gallery__container {
+        display: flex;
+        flex-wrap: nowrap;
+        overflow-x: scroll;
+        gap: 15px;
+    }
+}
