--- a/blocks/features/__list/features__list.css
+++ b/blocks/features/__list/features__list.css
@@ -17,3 +17,11 @@
         column-gap: 24px;
     }
 }
+
+@media screen and (max-width: 560px) {
+    .features__list {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        row-gap: 30px;
+    }
+}
