--- a/blocks/features/__text/features__text.css
+++ b/blocks/features/__text/features__text.css
@@ -3,3 +3,12 @@
   font-size: 16px;
   line-height: 28px;
 }
+
+@media screen and (max-width: 640px) {
+    .features__text {
+        font-size: 14px;
+        line-height: 28px;
+    }
+}
+
+
