--- a/blocks/features/features.css
+++ b/blocks/features/features.css
@@ -4,3 +4,10 @@
   padding-top: 64px;
   padding-bottom: 92px;
 }
+
+@media screen and (max-width: 640px) {
+    .features {
+        padding-top: 61px;
+        padding-bottom: 59px;
+    }
+}
