--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -4,3 +4,10 @@
     padding-top: 96px;
     padding-bottom: 96px;
 }
+
+@media screen and (max-width: 540px) {
+    .gallery {
+        padding-top: 35px;
+        padding-bottom: 34px;
+    }
+}
