--- a/blocks/socials/__item/socials__item.css
+++ b/blocks/socials/__item/socials__item.css
@@ -5,3 +5,9 @@
 .socials__item:nth-last-of-type(1) {
   margin-right: 0;
 }
+
+@media screen and (max-width: 640px) {
+    .socials__item {
+        margin-right: 13px;
+    }
+}
