--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,25 +1,50 @@
 .form__input {
-  box-sizing: border-box;
-  font-family: inherit;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 2;
-  padding-left: 62px;
-  background-repeat: no-repeat;
-  background-position: 24px;
-  background-color: #f8f8f8;
-  box-shadow: inset 0px 3px 10px rgba(199, 199, 199, 0.25);
-  border-radius: 5px;
-  border: none;
-  width: 380px;
-  height: 70px;
+    box-sizing: border-box;
+    font-family: inherit;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+    padding-left: 53px;
+    background-repeat: no-repeat;
+    background-position: 24px;
+    background-color: #f8f8f8;
+    box-shadow: inset 0px 3px 10px rgba(199, 199, 199, 0.25);
+    border-radius: 5px;
+    border: none;
+    width: 380px;
+    height: 70px;
 }
 
 .form__input:first-of-type {
-  background-image: url(../../../images/footer/user-icon.svg);
-  margin-bottom: 20px;
+    background-image: url(../../../images/footer/user-icon.svg);
+    margin-bottom: 20px;
 }
 
 .form__input:last-of-type {
-  background-image: url(../../../images/footer/phone-icon.svg);
+    background-image: url(../../../images/footer/phone-icon.svg);
+}
+
+.form__input::-webkit-.form__input-placeholder {
+    font-family: inherit;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+}
+.form__input::-moz-placeholder {
+    font-family: inherit;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+}
+.form__input::-ms-.form__input-placeholder {
+    font-family: inherit;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+}
+.form__input::placeholder {
+    font-family: inherit;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
 }
