--- a/blocks/footer/__privacy/footer__privacy.css
+++ b/blocks/footer/__privacy/footer__privacy.css
@@ -1,9 +1,26 @@
 .footer__privacy {
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 1.2;
-  text-decoration-line: underline;
-  margin: 0;
-  color: #949494;
-  grid-area: privacy;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 1.2;
+    text-decoration-line: none;
+    margin: 0 auto 0 0;
+    color: #949494;
+    grid-area: privacy;
+    position: relative;
+    transition: opacity 0.3s ease, color 0.3s ease;
+}
+
+.footer__privacy::before {
+    content: "";
+    display: block;
+    border-bottom: solid 1px #949494;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 1px;
+}
+
+.footer__privacy:hover {
+    color: #fff;
+    opacity: 0.8;
 }
