--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,7 +1,7 @@
 .form__button {
   font-family: inherit;
   border: none;
-  background: #ffbb01;
+  background-color: #ffbb01;
   box-shadow: 0px 4px 0px #b68500;
   border-radius: 10px;
   padding: 25px 102px;
@@ -11,4 +11,14 @@
   line-height: 1.3;
   text-transform: uppercase;
   cursor: pointer;
+  transition: box-shadow .3s ease,
+  background-color .3s ease;
+}
+
+.form__button:focus {
+    box-shadow: 0px 3px 0px #b68500;
+}
+
+.form__button:hover {
+    background-color: #ffc31e;
 }
