--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -15,6 +15,11 @@
     height: 70px;
 }
 
+.form__input:focus {
+    outline: none;
+    border: 1px solid #ffc41d;
+}
+
 .form__input:first-of-type {
     background-image: url(../../../images/footer/user-icon.svg);
     margin-bottom: 20px;
