--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -25,7 +25,7 @@
         flex-wrap: nowrap;
         overflow-x: scroll;
         gap: 15px;
-        scrollbar-color: #ffbb01;
+        scrollbar-color: #ffbb01 #cecece;
         scrollbar-width: thin;
     }
 }
