--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,9 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/content-title/content-title.css);
 @import url(../blocks/section-container/section-container.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/button/_place/button_place_hero.css);
+@import url(../blocks/button/_place/button_place_footer.css);
 
 /* header */
 @import url(../blocks/header/header.css);
