--- a/blocks/socials/__link/socials__link.css
+++ b/blocks/socials/__link/socials__link.css
@@ -1,4 +1,9 @@
 .socials__link {
     text-decoration: none;
     display: block;
+    transition: 0.2s ease-in-out;
+}
+
+.socials__link:hover {
+    transform: scale(1.2);
 }
