--- a/blocks/button/_place/button_place_hero.css
+++ b/blocks/button/_place/button_place_hero.css
@@ -3,3 +3,27 @@
     text-decoration: none;
     align-self: start;
 }
+
+@media all and (max-width: 861px) {
+    .button_place_hero {
+        font-size: 11px;
+        padding: 20px 57px;
+    }
+}
+
+@media all and (max-width: 736px) {
+    .button_place_hero {
+        order: 5;
+        margin: auto;
+        padding: 23px 68px;
+    }
+}
+
+@media all and (max-width: 394px) {
+    .button_place_hero {
+        order: 5;
+        margin: auto;
+        padding: 16px 60px;
+        font-size: 10px;
+    }
+}
