--- a/blocks/hero/__container/hero__container.css
+++ b/blocks/hero/__container/hero__container.css
@@ -2,4 +2,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-right: 57px;
+}
+
+@media all and (max-width: 736px) {
+    .hero__container {
+        margin: auto;
+        text-align: center;
+        padding-right: 0;
+    }
 }
