--- a/blocks/hero/__content/hero__content.css
+++ b/blocks/hero/__content/hero__content.css
@@ -3,3 +3,10 @@
   justify-content: space-between;
   padding: 72px 0 71px;
 }
+
+@media all and (max-width: 736px) {
+    .hero__content {
+        padding: 11px 0 42px;
+        flex-direction: column;
+    }
+}
