--- a/blocks/hero/__freelancer/hero__freelancer.css
+++ b/blocks/hero/__freelancer/hero__freelancer.css
@@ -1,7 +1,31 @@
 .hero__freelancer {
-  color: #ffbb01;
-  font-size: 24px;
-  line-height: 1.17;
-  margin: 0;
-  margin-bottom: 13px;
+    color: #ffbb01;
+    font-size: 24px;
+    line-height: 1.17;
+    margin: 0;
+    margin-bottom: 13px;
+}
+
+@media all and (max-width: 861px) {
+    .hero__freelancer {
+        font-size: 16px;
+        line-height: 1.69;
+    }
+}
+
+@media all and (max-width: 736px) {
+    .hero__freelancer {
+        order: 2;
+        font-size: 24px;
+        line-height: 1.17;
+    }
+}
+
+@media all and (max-width: 394px) {
+    .hero__freelancer {
+        order: 2;
+        font-size: 16px;
+        line-height: 1.69;
+        margin-bottom: 4px;
+    }
 }
