--- a/blocks/portfolio/__projects/portfolio__projects.css
+++ b/blocks/portfolio/__projects/portfolio__projects.css
@@ -5,3 +5,10 @@
     flex-wrap: wrap;
     gap: 16px;
 }
+
+@media screen and (max-width: 430px) {
+    .portfolio__projects {
+        gap: 35px;
+        margin-top: 35px;
+    }
+}
