--- a/blocks/project/__title/project__title.css
+++ b/blocks/project/__title/project__title.css
@@ -8,3 +8,11 @@
     position: relative;
     z-index: 2;
   }
+
+@media screen and (max-width: 430px) {
+    .project__title {
+        font-size: 16px;
+        line-height: 19px;
+        margin-bottom: 22px;
+    }
+}
