--- a/blocks/footer/__contact-data/footer__contact-data.css
+++ b/blocks/footer/__contact-data/footer__contact-data.css
@@ -11,3 +11,10 @@
 .footer__contact-data:hover {
     opacity: .8;
 }
+
+@media all and (max-width: 535px) {
+    .footer__contact-data {
+        font-size: 14px;
+        line-height: 1.14;
+    }
+}
