--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -53,3 +53,10 @@
     font-size: 14px;
     line-height: 2;
 }
+
+@media all and (max-width: 535px) {
+    .form__input {
+        width: 220px;
+        height: 64px;
+    }
+}
