--- a/blocks/content-title/content-title.css
+++ b/blocks/content-title/content-title.css
@@ -8,7 +8,14 @@
 
 @media screen and (max-width: 640px) {
     .content-title {
+        font-size: 26px;
+    }
+}
+
+@media screen and (max-width: 385px) {
+    .content-title {
         font-size: 19px;
         line-height: 1;
     }
 }
+
