--- a/blocks/footer/__contact-heading/footer__contact-heading.css
+++ b/blocks/footer/__contact-heading/footer__contact-heading.css
@@ -1,7 +1,14 @@
 .footer__contact-heading {
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 1.17;
-  margin: 0;
-  margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 1.17;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+@media all and (max-width: 535px) {
+    .footer__contact-heading {
+        font-size: 18px;
+        margin-bottom: 12px;
+    }
 }
