--- a/blocks/footer/__contacts-list/footer__contacts-list.css
+++ b/blocks/footer/__contacts-list/footer__contacts-list.css
@@ -7,7 +7,24 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, minmax(min-content, max-content));
-    grid-template-areas: 
-    "phone . mail"
-    "network network network"
+    grid-template-areas:
+        "phone . mail"
+        "network network network";
+}
+
+@media all and (max-width: 971px) {
+    .footer__contacts-list {
+        grid-template-columns: repeat(autofill, minmax(456px, 1fr));
+        text-align: center;
+        margin: auto;
+    }
+}
+
+@media all and (max-width: 535px) {
+    .footer__contacts-list {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        margin: 0;
+    }
 }
