--- a/blocks/footer/__text-container/footer__text-container.css
+++ b/blocks/footer/__text-container/footer__text-container.css
@@ -3,7 +3,22 @@
     display: grid;
     grid-template-rows: repeat(3, minmax(min-content, max-content));
     grid-template-areas:
-    "contacts"
-    "icon"
-    "privacy";
+        "contacts"
+        "icon"
+        "privacy";
+}
+
+
+@media all and (max-width: 971px) {
+    .footer__text-container {
+        margin-top: 53px;
+    }
+}
+
+@media all and (max-width: 535px) {
+    .footer__text-container {
+        display: flex;
+        flex-direction: column;
+        align-content: flex-start;
+    }
 }
