--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,9 +1,16 @@
 .form__title {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 1.56;
-  color: #000;
-  max-width: 380px;
-  text-align: center;
-  margin: 0;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 1.56;
+    color: #000;
+    max-width: 380px;
+    text-align: center;
+    margin: 0;
+}
+
+@media all and (max-width: 535px) {
+    .form__title {
+        font-size: 15px;
+        line-height: 1.40;
+    }
 }
