--- a/blocks/footer/__text-container/footer__text-container.css
+++ b/blocks/footer/__text-container/footer__text-container.css
@@ -19,6 +19,6 @@
     .footer__text-container {
         display: flex;
         flex-direction: column;
-        align-content: flex-start;
+        width: 264px;
     }
 }
