fixed footer margins

--- a/blocks/footer/__contact/footer__contact.css
+++ b/blocks/footer/__contact/footer__contact.css
@@ -1,3 +1,9 @@
 .footer__contact {
     margin-bottom: 32px;
 }
+
+@media screen and (max-width: 535px) {
+    .footer {
+        margin-bottom: 35px;
+    }
+}
