--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,9 @@
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     padding: 64px 0 93px;
 }
+
+@media screen and (max-width: 535px) {
+    .footer {
+        padding: 63px 0 50px;
+    }
+}
