--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #1B2944;
+    background-color: #1b2944;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     padding: 64px 0 93px;
 }
