--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,4 +1,4 @@
 .hero {
-    background-color: #1B2944;
+    background-color: #1b2944;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
