--- a/blocks/socials/__icon/_place/socials__icon_place_footer.css
+++ b/blocks/socials/__icon/_place/socials__icon_place_footer.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 535px) {
+@media all and (max-width: 535px) {
     .socials__icon_place_footer {
         width: 16px;
         height: auto;
