--- a/blocks/features/__item-name/features__item-name.css
+++ b/blocks/features/__item-name/features__item-name.css
@@ -6,7 +6,7 @@
     line-height: 28px;
 }
 
-@media screen and (max-width: 640px) {
+@media all and (max-width: 640px) {
     .features__item-name {
         font-size: 18px;
         line-height: 28px;
