--- a/blocks/features/__item/features__item.css
+++ b/blocks/features/__item/features__item.css
@@ -2,7 +2,7 @@
     max-width: 304px;
 }
 
-@media screen and (max-width: 1024px) {
+@media all and (max-width: 1024px) {
     .features__item {
         max-width: 360px;
     }
