--- a/blocks/features/__list/features__list.css
+++ b/blocks/features/__list/features__list.css
@@ -10,7 +10,7 @@
     list-style: none;
 }
 
-@media screen and (max-width: 1024px) {
+@media all and (max-width: 1024px) {
     .features__list {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
@@ -18,7 +18,7 @@
     }
 }
 
-@media screen and (max-width: 560px) {
+@media all and (max-width: 560px) {
     .features__list {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
