--- a/blocks/gallery/__item/gallery__item.css
+++ b/blocks/gallery/__item/gallery__item.css
@@ -3,7 +3,7 @@
     justify-self: center;
 }
 
-@media screen and (max-width: 320px) {
+@media all and (max-width: 320px) {
     .gallery__item {
         width: 126px;
         height: auto;
