--- a/blocks/portfolio/__projects/portfolio__projects.css
+++ b/blocks/portfolio/__projects/portfolio__projects.css
@@ -8,7 +8,7 @@
     gap: 16px;
 }
 
-@media screen and (max-width: 430px) {
+@media all and (max-width: 430px) {
     .portfolio__projects {
         gap: 35px;
         margin-top: 35px;
