--- a/blocks/portfolio/portfolio.css
+++ b/blocks/portfolio/portfolio.css
@@ -4,7 +4,7 @@
     padding: 64px 0 64px;
 }
 
-@media screen and (max-width: 430px) {
+@media all and (max-width: 430px) {
     .portfolio {
         padding: 61px 0 89px;
     }
