--- a/blocks/socials/__icon/socials__icon.css
+++ b/blocks/socials/__icon/socials__icon.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 394px) {
+@media all and (max-width: 394px) {
     .socials__icon {
         width: 16px;
         height: auto;
