--- a/blocks/socials/__item/socials__item.css
+++ b/blocks/socials/__item/socials__item.css
@@ -6,7 +6,7 @@
     margin-right: 0;
 }
 
-@media screen and (max-width: 394px) {
+@media all and (max-width: 394px) {
     .socials__item {
         margin-right: 13px;
     }
