--- a/blocks/socials/__icon/_place/socials__icon_place_footer.css
+++ b/blocks/socials/__icon/_place/socials__icon_place_footer.css
@@ -1,3 +1,11 @@
+.socials__icon_place_footer {
+    transition: 0.3s ease;
+}
+
+.socials__icon_place_footer:hover {
+    opacity: .8;
+}
+
 @media all and (max-width: 535px) {
     .socials__icon_place_footer {
         width: 16px;
