--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../blocks/socials/_place/socials_place_footer.css);
 @import url(../blocks/socials/__icon/socials__icon.css);
 @import url(../blocks/socials/__icon/_place/socials__icon_place_footer.css);
+@import url(../blocks/socials/__icon/_place/socials__icon_place_header.css);
 @import url(../blocks/socials/__item/_place/socials__item_place_footer.css);
 
 /* hero */
