--- a/blocks/socials/__icon/_place/socials__icon_place_footer.css
+++ b/blocks/socials/__icon/_place/socials__icon_place_footer.css
@@ -1,5 +1,5 @@
 .socials__icon_place_footer {
-    transition: 0.3s ease;
+    transition: opacity 0.3s ease;
 }
 
 .socials__icon_place_footer:hover {
