--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -12,10 +12,14 @@
     transition: box-shadow 0.3s ease, background-color 0.3s ease;
 }
 
-.button:focus {
+.button:active {
     box-shadow: 0px 3px 0px #b68500;
 }
 
 .button:hover {
     background-color: #ffc31e;
+}
+
+.button:focus {
+    outline: none;
 }
