--- a/blocks/portfolio/__projects/portfolio__projects.css
+++ b/blocks/portfolio/__projects/portfolio__projects.css
@@ -2,15 +2,21 @@
     margin: 0;
     padding: 0;
     margin-top: 54px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 16px;
 }
 
-@media all and (max-width: 430px) {
+@media all and (max-width: 816px) {
+    .portfolio__projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media all and (max-width: 560px) {
     .portfolio__projects {
         gap: 35px;
         margin-top: 35px;
+        grid-template-columns: repeat(1, 1fr);
     }
 }
