--- a/blocks/project/__link/project__link.css
+++ b/blocks/project/__link/project__link.css
@@ -5,7 +5,9 @@
     color: #fff;
     font-size: 12px;
     line-height: 1.3;
-    position: relative;
+    position: absolute;
+    left: 9.868%;
+    bottom: 9.21%;
     z-index: 2;
     display: flex;
     align-items: center;
@@ -16,4 +18,11 @@
 
 .project__link:hover {
     background-color: #db1b3e;
+}
+
+@media all and (max-width: 430px) {
+    .project__link {
+        left: 8.989%;
+        bottom: 9.363%;
+    }
 }
