--- a/blocks/project/__title/project__title.css
+++ b/blocks/project/__title/project__title.css
@@ -1,18 +1,20 @@
 .project__title {
     margin: 0;
-    margin-bottom: 12px;
     font-size: 18px;
     line-height: 1.56;
     font-weight: bold;
     max-width: 170px;
-    position: relative;
+    position: absolute;
+    left: 9.868%;
+    bottom: 25%;
     z-index: 2;
-  }
+}
 
 @media screen and (max-width: 430px) {
     .project__title {
+        left: 8.989%;
+        bottom: 29.588%;
         font-size: 16px;
         line-height: 19px;
-        margin-bottom: 22px;
     }
 }
