--- a/blocks/project/project.css
+++ b/blocks/project/project.css
@@ -2,13 +2,17 @@
     position: relative;
     border-radius: 6px;
     overflow: hidden;
-    width: 304px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding: 172px 30px 28px;
+    width: 100%;
     box-sizing: border-box;
+    list-style: none;
+}
+
+.project::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    padding-top: 100%;
 }
 
 .project::before {
@@ -25,11 +29,4 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-}
-
-@media all and (max-width: 430px) {
-    .project {
-        padding: 150px 24px 25px;
-        width: 267px;
-    }
 }
