--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -11,7 +11,7 @@
     box-shadow: inset 0px 3px 10px rgba(199, 199, 199, 0.25);
     border-radius: 5px;
     border: 1px solid transparent;
-    width: 380px;
+    width: 100%;
     height: 70px;
 }
 
@@ -56,7 +56,6 @@
 
 @media all and (max-width: 535px) {
     .form__input {
-        width: 220px;
         height: 64px;
     }
 }
