--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -4,8 +4,9 @@
     background-color: #fff;
     box-shadow: -5px 5px 0px #ffc41d;
     border-radius: 5px;
-    width: 458px;
-    height: 456px;
+    max-width: 458px;
+    width: 100%;
+    min-height: 456px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +16,7 @@
 
 @media all and (max-width: 535px) {
     .form {
-        width: 264px;
-        height: 393px;
+        min-height: 393px;
+        padding: 38px 22px 48px;
     }
 }
