--- a/blocks/project/__link/project__link.css
+++ b/blocks/project/__link/project__link.css
@@ -17,7 +17,7 @@
 }
 
 .project__link:hover {
-    background-color: #db1b3e;
+    background-color: #da1c3e;
 }
 
 @media all and (max-width: 430px) {
