--- a/blocks/project/project.css
+++ b/blocks/project/project.css
@@ -1,3 +1,7 @@
+/* @keyframes translate {
+
+} */
+
 .project {
     position: relative;
     border-radius: 6px;
@@ -8,7 +12,7 @@
 }
 
 .project::after {
-    content: '';
+    content: "";
     display: block;
     width: 0;
     height: 0;
@@ -29,4 +33,9 @@
     z-index: 1;
     width: 100%;
     height: 100%;
+    transition: opacity 0.45s ease-in-out;
+}
+
+.project:hover::before {
+    opacity: 0;
 }
