--- a/blocks/project/__link/project__link.css
+++ b/blocks/project/__link/project__link.css
@@ -5,13 +5,8 @@
     color: #fff;
     font-size: 12px;
     line-height: 1.3;
-    position: absolute;
-    left: 9.868%;
-    bottom: 9.21%;
-    z-index: 2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
+    text-align: center;
     text-decoration: none;
     transition: background-color 0.3s ease;
 }
