--- a/blocks/project/project.css
+++ b/blocks/project/project.css
@@ -1,7 +1,3 @@
-/* @keyframes translate {
-
-} */
-
 .project {
     position: relative;
     border-radius: 6px;
@@ -9,6 +5,8 @@
     width: 100%;
     box-sizing: border-box;
     list-style: none;
+    display: flex;
+    align-items: flex-end;
 }
 
 .project::after {
@@ -38,4 +36,18 @@
 
 .project:hover::before {
     opacity: 0;
+}
+
+@media all and (max-width: 816px) {
+    .project:last-of-type {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+}
+
+@media all and (max-width: 560px) {
+    .project:last-of-type {
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
 }
