--- a/pages/index.css
+++ b/pages/index.css
@@ -44,6 +44,7 @@
 @import url(../blocks/portfolio/portfolio.css);
 @import url(../blocks/portfolio/__projects/portfolio__projects.css);
 @import url(../blocks/project/project.css);
+@import url(../blocks/project/__container/project__container.css);
 @import url(../blocks/project/__image/project__image.css);
 @import url(../blocks/project/__title/project__title.css);
 @import url(../blocks/project/__link/project__link.css);
