--- a/blocks/socials/socials.css
+++ b/blocks/socials/socials.css
@@ -4,4 +4,11 @@
     margin: 0;
     display: flex;
     align-items: center;
+    gap: 21px;
+}
+
+@media all and (max-width: 535px) {
+    .socials {
+        gap: 13px;
+    }
 }
