--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,5 +6,6 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     min-width: 320px;
+    min-height: 100vh;
     color: #fff;
 }
